--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
         </section>
         <section id="screenshots">
             <h2>Screenshots</h2>
-            <p>
-                <!-- Replace with actual screenshots if available -->
-                <em>Screenshots coming soon!</em>
-            </p>
+            <div style="display: block; text-align: center;">
+                <img src="files/screen1.png" alt="Screenshot 1" style="max-width: 700px; width: 100%; margin-bottom: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.22); background: #23272a;" loading="lazy">
+                <img src="files/screen2.png" alt="Screenshot 2" style="max-width: 700px; width: 100%; margin-bottom: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.22); background: #23272a;" loading="lazy">
+                <img src="files/screen3.png" alt="Screenshot 3" style="max-width: 700px; width: 100%; margin-bottom: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.22); background: #23272a;" loading="lazy">
+            </div>
         </section>
         <section id="download">
             <h2>Download</h2>
