--- a/index.html
+++ b/index.html
@@ -674,19 +674,19 @@
                 
                 <div class="screenshot-gallery">
                     <div class="screenshot-item">
-                        <img src="file/screen1.png" alt="Exhibition Redev Screenshot 1" loading="lazy">
+                        <img src="files/screen1.png" alt="Exhibition Redev Screenshot 1" loading="lazy">
                         <div class="screenshot-caption">
                             In-game performance and visual enhancements
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="file/screen2.png" alt="Exhibition Redev Screenshot 2" loading="lazy">
+                        <img src="files/screen2.png" alt="Exhibition Redev Screenshot 2" loading="lazy">
                         <div class="screenshot-caption">
                             Advanced features and customization options
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="file/screen3.png" alt="Exhibition Redev Screenshot 3" loading="lazy">
+                        <img src="files/screen3.png" alt="Exhibition Redev Screenshot 3" loading="lazy">
                         <div class="screenshot-caption">
                             Main HUD and interface overview
                         </div>
